--- a/Manuscript/references.bib
+++ b/Manuscript/references.bib
@@ -98,17 +98,6 @@ But we cannot even imagine how many factors a single honeybee takes into account
   publisher = {Elsevier},
 }
 
-@Article{Traulsen2006,
-  author    = {Traulsen, Arne and Nowak, Martin A and Pacheco, Jorge M},
-  journal   = {Physical Review E—Statistical, Nonlinear, and Soft Matter Physics},
-  title     = {Stochastic dynamics of invasion and fixation},
-  year      = {2006},
-  number    = {1},
-  pages     = {011909},
-  volume    = {74},
-  publisher = {APS},
-
-}
 
 @article{imhof2006evolutionary,
   title={Evolutionary game dynamics in a Wright-Fisher process},
@@ -129,6 +118,15 @@ But we cannot even imagine how many factors a single honeybee takes into account
   pages={721--744},
   year={2007},
   publisher={Springer}
+}
+@article{traulsen2009stochastic,
+  title={Stochastic evolutionary game dynamics},
+  author={Traulsen, Arne and Hauert, Christoph},
+  journal={Reviews of nonlinear dynamics and complexity},
+  volume={2},
+  pages={25--61},
+  year={2009},
+  publisher={Wiley Online Library}
 }
 
 
